Fix layout issues

--- a/public/app.css
+++ b/public/app.css
@@ -1,4 +1,13 @@
 body{
     padding-top: 54px;
+    margin-bottom: 32px;
     overflow-wrap: break-word;
+}
+
+#deleteForm{
+    display: inline;
+}
+
+.extra{
+    padding-top: 8px;
 }
